# build-faiss

./: .claudeignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.arm64  LICENSE  README.md  THIRD-PARTY-NOTICES  demo_ivfpq_indexing.cpp
.github/workflows/: build.yml
demo/: CMakeLists.txt  bench_cosine.cpp  test_cosine.cpp
docs/arm64/: PLAN-arm64.md  PRD-arm64.md
scripts/: build-arm64-armpl.sh  build-arm64.sh  build.ps1  build.sh  check-install-armpl.sh  demo.ps1  demo.sh
